Changed css color classes in color widget and fixed firefox dropdown visibility

--- a/src/css/_widgets.react.css
+++ b/src/css/_widgets.react.css
@@ -92,6 +92,7 @@
     margin-right: 10px;
     outline: none;
     border-radius: 0;
+    border-radius: 6px;
 }
 
 .widget-dropdown select {
@@ -99,12 +100,13 @@
     font-size: 100%;
     font-weight: 400;
     outline: none;
-    border-radius: 0;
     background-color: #5e6064;
     color: white;
-    border: none;
+    border: 0;
     height: 20px;
     width: 16px; /* Remove width to get full dropdown to appear */
+    border-radius: 4px;
+    padding-left: 16px;
 }
 
 .widget-dropdown option {
@@ -115,7 +117,18 @@
 .form-control:focus {
     border-color: transparent;
     box-shadow: none;
-    border-radius: 0;
+    border-radius: 6px;
+    outline: none;
+}
+
+select {
+    appearance: none;
+    outline: none;
+    border: 0;
+    width: 100%;
+    background: #fff url('https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_keyboard_arrow_down_48px-128.png') no-repeat;
+    background-size: 16px;
+    background-position: left center;
 }
 
 /* React: Widget Vector */
